# LearnOpenGL

./: .gitignore  CMakeLists.txt  README.md
.cache/clangd/index/: glad.c.4C6414F4A6046BC2.idx  glad.h.B472C7917979F369.idx  khrplatform.h.F73C5E2A2C5C4B02.idx  main.cpp.425C93C283675ECC.idx  shaders.cpp.6BEE277CE312C8DB.idx  shaders.h.44CE6C99479BA481.idx  stb_image.cpp.CFB1D2E8D8A9609A.idx  stb_image.h.1A2D321101879084.idx
glad/include/glad/: glad.h
shaders/: shader.fs  shader.vs
src/: glad.c  main.cpp  shaders.cpp  shaders.h
